--- a/app/build.gradle
+++ b/app/build.gradle
@@ -26,6 +26,7 @@ android {
 }
 
 dependencies {
+    kapt "com.android.databinding:compiler:3.0.0"
     implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
@@ -48,4 +49,11 @@ dependencies {
     implementation 'com.android.support:customtabs:26.1.0'
     implementation 'com.android.support:recyclerview-v7:26.1.0'
     implementation 'com.android.support:cardview-v7:26.1.0'
+    implementation 'com.android.support:design:26.1.0'
+    implementation 'com.github.HITGIF:TextFieldBoxes:1.3.5'
+    implementation 'com.google.android:flexbox:0.3.1'
+    implementation 'gun0912.ted:tedbottompicker:1.0.12'
+}
+kapt {
+    generateStubs = true
 }
